# difftrace

./: LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  test-action.yml
src/difftrace/: __init__.py  __main__.py  cli.py  diff.py  graph.py  traverse.py
tests/: conftest.py  test_action.py  test_cli.py  test_diff.py  test_graph.py  test_integration.py  test_traverse.py
tests/fixtures/multi-workspace/python/: pyproject.toml
tests/fixtures/multi-workspace/python2/: pyproject.toml
tests/fixtures/workspace/: pyproject.toml
