[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "difftrace"
dynamic = ["version"]
description = "Change detection for uv monorepos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andrew Van" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
difftrace = "difftrace.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/difftrace/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/difftrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
