[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "difftrace"
dynamic = ["version"]
description = "Change detection for uv monorepos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andrew Van" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
difftrace = "difftrace.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/difftrace/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/difftrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"  # adjust to your minimum supported Python version
line-length = 88          # matches Black's default
src = ["src", "tests"]
exclude = ["src/difftrace/_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
# pyright uses uv's venv
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "pre-commit>=4.0", "pyright>=1.1"]
